--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -12,7 +12,7 @@
                             <p class="card-text">
                                 <b><%= listing.title %></b>
                                 <br>
-                                Price : &#8377;<%= listing.price.toLocaleString("en-IN") %> /night
+                                Price : &#8377;<%= listing.price %> /night
                             </p>
                         </div>
                     </div>
