--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -26,7 +26,7 @@
       <div class="row">
         <div class="mb-3 col-md-4">
           <label for="price" class="form-label">Price</label>
-          <input type="number" name="listings[price]" placeholder="enter price" class="form-control" required>
+          <input type="text" name="listings[price]" placeholder="enter price" class="form-control" required>
           <div class="invalid-feedback">Please provide a price.</div>
         </div>
 
