--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -12,8 +12,7 @@
           <p class="card-text">
             <b><%= listing.title %> </b><br>
             <%= listing.description %> <br>
-            <!-- here toLocalString method is to put comma ie , for our prices according to indian rupee standards eg 12,000-->
-             &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
+             &#8377;<%= listing.price %> <br>
             <%= listing.location %> <br>
             <%= listing.country %> <br>
           </p>
