--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,4 +1,4 @@
 <% layout("/layouts/boilerplate") %>
 <div class="alert alert-danger mt-4" role="alert">
-    <h4 class="alert"><%= message %></h4>
+    <h4 class="alert"><%= err.message %></h4>
   </div>
