--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,7 +1,7 @@
 <% layout("/layouts/boilerplate") %>
 <body>
     <h2>All Lists</h2>
-    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 g-3"> 
+    <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 g-3 mb-3"> 
         <% for(let listing of allListings){ %>
             <div class="col">
                 <a href="/listings/<%= listing._id %>" class="listing-link">
