--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -5,14 +5,14 @@
         <% for(let listing of allListings){ %>
             <div class="col">
                 <a href="/listings/<%= listing._id %>" class="listing-link">
-                    <div class="card h-100">
+                    <div class="card h-100 listing-card">
                         <img src="<%= listing.image.url %>" class="card-img-top" alt="..." style="height: 20rem;">
-                        <div class="card-img-overlay">dd</div>
+                        <div class="card-img-overlay"></div>
                         <div class="card-body">
                             <p class="card-text">
                                 <b><%= listing.title %></b>
                                 <br>
-                                Price : &#8377;<%= listing.price %> /night
+                                Price : &#8377;<%= listing.price.toLocaleString("en-IN") %> /night
                             </p>
                         </div>
                     </div>
