--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,10 +1,10 @@
 <% if(success.length){ %>
-    <div class="alert alert-success alert-dismissible col-4 offset-lg-4 offset-sm-3" role="alert">
+    <div class="alert alert-success alert-dismissible col-4 offset-lg-4 offset-sm-3 mt-1" role="alert">
         <%= success %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 <% } %> <% if(error && error.length){ %>
-    <div class="alert alert-danger alert-dismissible col-4 offset-lg-4 offset-sm-3" role="alert">
+    <div class="alert alert-danger alert-dismissible col-4 offset-lg-4 offset-sm-3 mt-1" role="alert">
         <%= error %>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
