--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -2,7 +2,7 @@
 <h1 class="offset-sm-3 offset-lg-4 mt-4">Login</h1>
 <div class="row mt-4">
     <div class="col-lg-4  col-sm-6 offset-lg-4 offset-sm-3">
-        <form action="/login" method="post" class="needs-validation" novalidate>
+        <form action="/user/login" method="post" class="needs-validation" novalidate>
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" id="username" name="username" class="form-control" required>
@@ -14,6 +14,9 @@
                 <div class="invalid-feedback">Please provide your password</div>
             </div>
             <button class="btn btn-primary mt-3 mb-1">Login</button>
+        </form>
+        <form action="/user/forgetPassword" method="get">
+            <button class="btn btn-danger">Forget password</button>
         </form>
     </div>
 </div>
