--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -2,7 +2,7 @@
 <h1 class="offset-sm-3 offset-lg-4">Sign up</h1>
 <div class="row mt-4">
     <div class="col-lg-4  col-sm-6 offset-lg-4 offset-sm-3">
-        <form action="/signup" method="post" class="needs-validation" novalidate>
+        <form action="user/signup" method="post" class="needs-validation" novalidate>
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" id="username" name="username" class="form-control" required>
