associated owner with listing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,9 +96,7 @@ body {
 .show-card{
     padding: auto 0px auto 0px;
 }
-/* 
-review-card */
 
-.review-card{
-    
+.text-left {
+    text-align: left;
 }
