--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -5,18 +5,19 @@
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link"  href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/listings">All listings</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/listings/new">New Listings</a>
-          </li>
-        </ul>
+      <div class="navbar-nav">
+        <a class="nav-link" href="/listings">Home</a>
+        <a class="nav-link" href="/listings">All Listings</a>
+        <a class="nav-link" href="/listings/new">Add new Listing</a>
+      </div>
+      <div class="navbar-nav ms-auto">
+        <% if(!currUser){%>
+        <a class="nav-link" href="/user/signup">Sign Up</a>
+        <a class="nav-link" href="/user/login">Login</a>
+        <% } %> 
+        <%if(currUser){%>
+        <a class="nav-link" href="/user/logout">Logout</a>
+        <% } %>
       </div>
     </div>
   </nav>
