--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -9,12 +9,11 @@
     <div class="card col-6 offset-3 show-card">
         <img src="<%= listing.image.url  %>" class="card-img-top show-img" alt="...">
         <div class="card-body">
-          <p class="card-text">
-            <%= listing.description %> <br>
-             &#8377;<%= listing.price.toLocaleString("en-IN") %> <br>
-            <%= listing.location %> <br>
-            <%= listing.country %> <br>
-          </p>
+          <p class="card-text text-left"> <i>Owned by:<%= listing.owner.username %></i> </p>
+          <p class="card-text text-left"> <%= listing.description %> </p>
+          <p class="text-left card-text"> &#8377;<%= listing.price.toLocaleString("en-IN") %> </p>
+          <p class="card-text text-left"><%= listing.location %></p>
+          <p class="card-text text-left"><%= listing.country %></p>
         </div>
       </div>
     </div>
